--- a/Ana_chatbot_desafio_alura.ipynb
+++ b/Ana_chatbot_desafio_alura.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM050MfcVASJX+sprNXDqsU",
+      "authorship_tag": "ABX9TyMRYA+g+3xcf0LBPajO7eRs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,21 +43,22 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q -U google-generativeai\n"
+        "!pip install -q -U google-generativeai\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY='AIzaSyBNyuaQ-FrEs8yEs8ESXWrbgqMX7AmTt8k'\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "541zNrf4QG-r"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
